# interface/handler/admin_handler.go
@@ -1,8 +1,13 @@
 package handler
 
 import (
+	"IkezawaYuki/a-root-backend/domain/entity"
 	"IkezawaYuki/a-root-backend/interface/dto/req"
 	_ "IkezawaYuki/a-root-backend/interface/dto/res"
+	"IkezawaYuki/a-root-backend/interface/session"
+	"github.com/redis/go-redis/v9"
+
+	//"IkezawaYuki/a-root-backend/interface/middleware"
 	"IkezawaYuki/a-root-backend/usecase"
 	"github.com/gin-gonic/gin"
 	"log/slog"
@@ -12,11 +17,13 @@ import (
 
 type AdminHandler struct {
 	adminUsecase usecase.AdminUsecase
+	redisClient  *redis.Client
 }
 
-func NewAdminHandler(adminUsecase usecase.AdminUsecase) AdminHandler {
+func NewAdminHandler(adminUsecase usecase.AdminUsecase, redisClient *redis.Client) AdminHandler {
 	return AdminHandler{
 		adminUsecase: adminUsecase,
+		redisClient:  redisClient,
 	}
 }
 
@@ -257,7 +264,7 @@ func (h AdminHandler) CreateCustomer(c *gin.Context) {
 // @Accept application/json
 // @Produce application/json
 // @Success 200 {object} res.Customer
-// @Router /admin/customers/{customer_id} [GET]
+// @Router /admin/customers/{customer_id} [DELETE]
 func (h AdminHandler) DeleteCustomer(c *gin.Context) {
 	slog.Info("DeleteCustomer is invoked")
 	customerID, err := strconv.Atoi(c.Param("customer_id"))
@@ -270,5 +277,35 @@ func (h AdminHandler) DeleteCustomer(c *gin.Context) {
 		handleError(c, err)
 		return
 	}
+	c.JSON(http.StatusOK, resp)
+}
+
+// Login
+// @Summary ログインする
+// @Description
+// @Tags admin
+// @Accept application/json
+// @Produce application/json
+// @param default body req.User true "ログイン情報"
+// @Success 200 {object} res.Auth
+// @Router /customer/login [POST]
+func (h AdminHandler) Login(c *gin.Context) {
+	slog.Info("Login is invoked")
+	var user req.User
+	if err := c.ShouldBindJSON(&user); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+	resp, err := h.adminUsecase.Login(c.Request.Context(), user)
+	if err != nil {
+		handleError(c, err)
+		return
+	}
+	err = session.SetLoginSession(c, entity.ARootAdmin, h.redisClient, resp.UserID)
+	if err != nil {
+		handleError(c, err)
+		return
+	}
+
 	c.JSON(http.StatusOK, resp)
 }
